--- a/config/database.yml
+++ b/config/database.yml
@@ -4,15 +4,16 @@ default: &default
   pool: 5
   username: <%= ENV['POSTGRES_USER'] %>
   password: <%= ENV['POSTGRES_PASSWORD'] %>
-  host: <%= ENV['POSTGRES_HOST'] %>
+  #host: <%= ENV['POSTGRES_HOST'] %>
+  host: localhost
 
 development:
   <<: *default
-  database: capstone_demoapp_development
+  database: capstone-demoapp_development
 
 test:
   <<: *default
-  database: capstone_demoapp_test
+  database: capstone-demoapp_test
 
 production:
   adapter: postgresql
