Fix database config

--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,8 @@ default: &default
   pool: 5
   username: <%= ENV['POSTGRES_USER'] %>
   password: <%= ENV['POSTGRES_PASSWORD'] %>
-  host: localhost
+  host: <%= ENV['POSTGRES_HOST'] %>
+  #host: localhost
 
 development:
   <<: *default
