Solution for module 6

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,11 +8,11 @@ default: &default
 
 development:
   <<: *default
-  database: capstone_demoapp_development
+  database: capstone-demoapp_development
 
 test:
   <<: *default
-  database: capstone_demoapp_test
+  database: capstone-demoapp_test
 
 production:
   adapter: postgresql
